# rules_elisp

./: .bazelignore  .bazelrc  .clang-format  .clangd  .dir-locals.el  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  BUILD  MODULE.bazel  Makefile  README.md  README.org  REPO.bazel  WORKSPACE  WORKSPACE.bzlmod  build.py  c-std.bazelrc  check.ps1  check_python.py  compdb.BUILD  debug_cache  delete_windows_caches  docs.py  emacs-27.patch  emacs.BUILD  go.mod  go.sum  index.html  internal.bzl  json.BUILD  junit_xsd.BUILD  linux-requirements.txt  local.BUILD.template  macos-gcc.bazelrc  macos-requirements.txt  nogo.json  protobuf.patch  requirements.in  (+13 more)
.githooks/: pre-commit
.github/actions/set-up/: action.yaml
.github/workflows/: bazel-test.yaml  debug-cache.yaml  debug-disk-space.yaml  set-up.yaml  update-lockfiles.yaml
bazel/: BUILD  protobuf.patch
constraints/: BUILD
dev/: BUILD  check_python.bzl  check_python.py  gopackagesdriver  is_default_bazel_version.bzl  is_default_bazel_version.bzl.template  linux-requirements.txt  local_binary.BUILD.template  local_binary.bzl  local_binary.bzl.template  local_config.BUILD.template  local_config.bzl  local_config.bzl.template  macos-requirements.txt  mypy.bzl  nogo.json  pylint.bzl  pytype.bzl  requirements.in  requirements.txt  run_pylint.py  version_test.go  windows-requirements.txt
docs/: BUILD  consistency_test.go  defs.bzl  elisp.md  elisp.org  elisp_defs.md  emacs.md  emacs.org  generate.go  generate.py  index.md  index.org  makeinfo.bzl  makeinfo.py  makeinfo.sh  manual.org  merge.el  merged_manual.bzl  org.py  reencode.py  repositories.md  repositories.org
docs/private/: defs.bzl
docs/stardoc_output_go_proto/: dummy.go
documentation/: BUILD  elisp_defs.md  emacs_defs.md  repositories.md
elisp/: BUILD  BUILD.template  WORKSPACE.template  algorithm.h  binary.cc  binary.h  binary.template  binary_main.cc  binary_test.cc  binary_test.py  compile.el  copy_file.py  defs.bzl  defs.md  defs_test.bzl  elisp.proto  elisp_binary.bzl  elisp_cc_module.bzl  elisp_library.bzl  elisp_manual.bzl  elisp_test.bzl  emacs.cc  emacs.h  exec.cc  exec.h  exec_test.cc  export-org.el  extensions.bzl  file.cc  file.h  file_test.cc  gen-metadata.el  gen-pkg-el.el  int.h  launcher.cc  load.cc  load.h  load.py  load_test.py  local_emacs.sh  (+30 more)
elisp/common/: BUILD  elisp_info.bzl
elisp/ert/: BUILD  runner-test.el  runner.el  runner_test.go  test-lib.el  test.el  write_xml_report.py
elisp/extensions/: BUILD  elisp.bzl
elisp/private/: BUILD  binary.bzl  bootstrap.bzl  build_package.bzl  cc_config.bzl  cc_default_info.bzl  cc_defaults.bzl  cc_launcher.bzl  cc_launcher_config.bzl  cc_literals.bzl  compile.bzl  deps.bzl  emacs.bzl  emacs_repository.bzl  executable_only.bzl  features.bzl  filenames.bzl  generated.bzl  generated.template.bzl  load_path.bzl  local_emacs.bzl  local_emacs_repository.bzl  manual.bzl  module_config.bzl  module_config_info.bzl  run_emacs.bzl  util.bzl
elisp/private/tools/: BUILD  BUILD.template  binary.cc  binary.h  binary_test.py  compile.el  (+53 more)
elisp/proto/: BUILD  elisp_proto_library.bzl  generate-bundle.el  generate.el  module.c  module.def  module_test.py  plugin.py  proto-test.el  proto.el  proto2_test.proto  test.proto
elisp/runfiles/: BUILD  runfiles-test.el  runfiles.el  test-lib.el  test-manifest
elisp/toolchains/: BUILD  elisp_emacs_binary.bzl  elisp_toolchain.bzl
elisp/wrap/: BUILD  main.go
emacs/: BUILD  build.py  defs.bzl  driver.template  dummy.sh  emacs.BUILD  emacs_noarm.BUILD  emacs_test.py  emacs_test.sh  emacs_unexec.BUILD  exec.cc  exec.h  exec_test.cc  launcher.cc  manifest.proto  random.cc  random.h
emacs/wrap/: BUILD  main.go
examples/: BUILD  bin.el  bin_test.go  bin_test.py  bin_test.sh  config.org  data.txt  doc.org  example.proto  interactive.el  lib-1-test.el  lib-1.el  lib-2-a.el  lib-2-b.el  lib-2-pkg.el  lib-2-test.el  lib-2.el  module.c  module.def  proto-test.el
examples/ext/: .bazelignore  .bazelrc  BUILD  MODULE.bazel  REPO.bazel  WORKSPACE  lib-4-test.el  lib-4.el  repositories.bzl
examples/lib-1-resources/: test.txt
examples/subdir/: lib-3-test.el  lib-3.el
gazelle/: BUILD  builtin.go  extension.go  feature.go  gazelle_test.go  generate.go  generate_test.go  imports.go  imports_test.go  integration_test.go  language.go  loadpath.go  resolve.go  resolve_test.go  source.go
gazelle/elisp/: BUILD  builtin.go  extension.go  feature.go  generate.go  generate_test.go  imports.go  imports_test.go  integration_test.go  language.go  loadpath.go  resolve.go  resolve_test.go  source.go
gazelle/testdata/: BUILD
internal/: BUILD  file.cc  file.h  file_test.cc  int.h  macros.h  random.cc  random.h  random_test.cc  status.cc  status.h  statusor.h  str.h
private/: BUILD  cc_config.bzl  config.template.bzl  defs.bzl  dev.template.bzl  emacs.BUILD.template  extensions.bzl  generated.bzl  generated.template.bzl  junit_xsd.BUILD.template  junit_xsd.bzl  non_module_deps.bzl  package_features.bzl  prod.template.BUILD  prod.template.bzl  repositories.bzl  texinfo.BUILD.template
private/testutil/: BUILD  runfileflag.go
registry/: README.md  bazel_registry.json
tests/: BUILD  binary_test.go  defs.bzl  elisp_info_test.bzl  elisp_test_suite.bzl  emacs_test.go  emacs_test.py  empty.el  empty_test.go  empty_test.py  ert_test.go  print-version.el  signal.el  signal_test.py  test-lib.el  test-lib.el.instrument  test.bzl  test.el  unix_test.go  windows_test.go
tests/integration/: BUILD  emacs_test.go  ert_test.go  test-lib.el  test.el  unix_test.go  windows_test.go
tests/pkg/: BUILD  test.el
tests/private/: defs.bzl
tests/proto/: BUILD  cat.el  module_test.go  module_test.py  proto-test.el  test.proto
tests/runfiles/: BUILD  runfiles-test.el  test-lib.el  test-manifest  test-mapping  testäα𝐴🐈'.txt
tests/tools/: BUILD  binary_test.go  binary_test.py  copy_tree_test.go  load_test.cc  load_test.py  manifest_test.cc  manifest_test.py  numeric_test.cc  run-tst-test.el  runfiles_test.cc  strings_test.cc  system_test.cc
tests/wrap/: BUILD  main.go  wrap.py
(+26 files in other folders)
