# Copyright 2023, 2024, 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for an external example."""

module(name = "phst_rules_elisp_example")

bazel_dep(name = "phst_rules_elisp")
local_path_override(
    module_name = "phst_rules_elisp",
    path = "../..",
)

elisp = use_extension("@phst_rules_elisp//elisp/extensions:elisp.bzl", "elisp")
elisp.http_archive(
    name = "dash",
    exclude = ["dash-functional.el"],
    integrity = "sha256-FSggKxdDwpkenNRiTcKYPrms/7Neno4OZowSzDZSccU=",
    strip_prefix = "dash.el-2.19.1/",
    target_name = "dash",
    urls = [
        "https://github.com/magnars/dash.el/archive/refs/tags/2.19.1.zip",  # 2021-08-26
    ],
)
use_repo(elisp, "dash")

# Needed for building with Clang-CL on Windows.
bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension", dev_dependency = True)
use_repo(cc_configure, "local_config_cc")
